# serializer version: 1
# name: test_record_loading_be[False]
  OrderedDict({
    'dossier_number': '2017-1',
    'plot_data': list([
      dict({
        'coord_east': 2710662.0,
        'coord_north': 1225997.0,
        'egrid_number': 'HK207838123456',
        'plot_number': '`123`',
      }),
      dict({
        'coord_east': 2706670.0,
        'coord_north': 1223992.0,
        'egrid_number': 'EGRIDDELLEY',
        'plot_number': '2BA',
      }),
    ]),
    'application_type': 'Migriertes Dossier',
    'street': 'MeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstr...',
    'submit_date': datetime.datetime(2021, 12, 12, 0, 0),
    'publication_date': datetime.date(2021, 12, 12),
    'construction_start_date': datetime.date(2021, 12, 12),
    'profile_approval_date': datetime.date(2021, 12, 12),
    'decision_date': datetime.date(2021, 12, 12),
    'final_approval_date': datetime.date(2021, 12, 12),
    'completion_date': datetime.date(2021, 12, 12),
    'applicants': list([
      dict({
        'first_name': 'Willy',
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'street': 'Candy Lane',
        'street_number': '13',
        'town': 'Wonderland',
        'zip': 1234,
      }),
    ]),
    'landowners': list([
      dict({
        'first_name': 'Willy',
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'street': 'Candy Lane',
        'street_number': '13',
        'town': 'Wonderland',
        'zip': None,
      }),
    ]),
    'project_authors': list([
      dict({
        'first_name': 'Willy',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Wonka',
        'street': 'Candy Lane',
        'street_number': None,
        'town': 'Wonderland',
        'zip': None,
      }),
    ]),
  })
# ---
# name: test_record_loading_be[True]
  OrderedDict({
    'dossier_number': None,
    'plot_data': list([
      dict({
        'coord_east': 2710662.0,
        'coord_north': 1225997.0,
        'egrid_number': 'HK207838123456',
        'plot_number': '`123`',
      }),
      dict({
        'coord_east': 2706670.0,
        'coord_north': 1223992.0,
        'egrid_number': 'EGRIDDELLEY',
        'plot_number': '2BA',
      }),
    ]),
    'application_type': 'Migriertes Dossier',
    'street': 'MeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstr...',
    'submit_date': datetime.datetime(2021, 12, 12, 0, 0),
    'publication_date': datetime.date(2021, 12, 12),
    'construction_start_date': datetime.date(2021, 12, 12),
    'profile_approval_date': datetime.date(2021, 12, 12),
    'decision_date': datetime.date(2021, 12, 12),
    'final_approval_date': datetime.date(2021, 12, 12),
    'completion_date': datetime.date(2021, 12, 12),
    'applicants': list([
      dict({
        'first_name': 'Willy',
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'street': 'Candy Lane',
        'street_number': '13',
        'town': 'Wonderland',
        'zip': 1234,
      }),
    ]),
    'landowners': list([
      dict({
        'first_name': 'Willy',
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'street': 'Candy Lane',
        'street_number': '13',
        'town': 'Wonderland',
        'zip': None,
      }),
    ]),
    'project_authors': list([
      dict({
        'first_name': 'Willy',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Wonka',
        'street': 'Candy Lane',
        'street_number': None,
        'town': 'Wonderland',
        'zip': None,
      }),
    ]),
  })
# ---
# name: test_record_loading_so[False]
  OrderedDict({
    'plot_data': list([
      dict({
        'coord_east': 2710662.123,
        'coord_north': 1225997.123,
        'egrid_number': 'CH123456789123',
        'plot_number': '1',
        'zip': None,
      }),
    ]),
    'application_type': 'Migriertes Dossier',
    'street': 'MeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreet',
    'submit_date': datetime.datetime(2021, 12, 12, 0, 0),
    'publication_date': datetime.date(2021, 12, 12),
    'construction_start_date': datetime.date(2021, 12, 12),
    'profile_approval_date': datetime.date(2021, 12, 12),
    'decision_date': datetime.date(2021, 12, 12),
    'final_approval_date': datetime.date(2021, 12, 12),
    'completion_date': datetime.date(2021, 12, 12),
    'applicants': list([
      dict({
        'country': None,
        'country_code': None,
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'has_representative': None,
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'po_box': None,
        'representative_country': None,
        'representative_country_code': None,
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': None,
        'street': 'Candy Lane',
        'street_number': '13',
        'tel': '+1 101 10 01 101',
        'title': None,
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
    'landowners': list([
      dict({
        'country': None,
        'country_code': None,
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'has_representative': None,
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'po_box': None,
        'representative_country': None,
        'representative_country_code': None,
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': None,
        'street': 'Candy Lane',
        'street_number': '13',
        'tel': '+1 101 10 01 101',
        'title': None,
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
    'project_authors': list([
      dict({
        'country': None,
        'country_code': None,
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'has_representative': None,
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Wonka',
        'po_box': None,
        'representative_country': None,
        'representative_country_code': None,
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': None,
        'street': 'Candy Lane',
        'street_number': None,
        'tel': '+1 101 10 01 101',
        'title': None,
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
  })
# ---
# name: test_record_loading_so[True]
  OrderedDict({
    'plot_data': list([
      dict({
        'coord_east': 2710662.123,
        'coord_north': 1225997.123,
        'egrid_number': 'CH123456789123',
        'plot_number': '1',
        'zip': None,
      }),
    ]),
    'application_type': 'Migriertes Dossier',
    'street': 'MeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreet',
    'submit_date': datetime.datetime(2021, 12, 12, 0, 0),
    'publication_date': datetime.date(2021, 12, 12),
    'construction_start_date': datetime.date(2021, 12, 12),
    'profile_approval_date': datetime.date(2021, 12, 12),
    'decision_date': datetime.date(2021, 12, 12),
    'final_approval_date': datetime.date(2021, 12, 12),
    'completion_date': datetime.date(2021, 12, 12),
    'applicants': list([
      dict({
        'country': None,
        'country_code': None,
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'has_representative': None,
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'po_box': None,
        'representative_country': None,
        'representative_country_code': None,
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': None,
        'street': 'Candy Lane',
        'street_number': '13',
        'tel': '+1 101 10 01 101',
        'title': None,
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
    'landowners': list([
      dict({
        'country': None,
        'country_code': None,
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'has_representative': None,
        'is_juristic_person': True,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'po_box': None,
        'representative_country': None,
        'representative_country_code': None,
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': None,
        'street': 'Candy Lane',
        'street_number': '13',
        'tel': '+1 101 10 01 101',
        'title': None,
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
    'project_authors': list([
      dict({
        'country': None,
        'country_code': None,
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'has_representative': None,
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Wonka',
        'po_box': None,
        'representative_country': None,
        'representative_country_code': None,
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': None,
        'street': 'Candy Lane',
        'street_number': None,
        'tel': '+1 101 10 01 101',
        'title': None,
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
  })
# ---
# name: test_record_loading_sz[False]
  OrderedDict({
    'coordinates': list([
      list([
        dict({
          'lat': 47.175669937318816,
          'lng': 8.8984885140077,
        }),
      ]),
    ]),
    'plot_data': list([
      dict({
        'egrid_number': 'HK207838123456',
        'plot_number': '123',
      }),
      dict({
        'egrid_number': 'EGRIDDELLEY',
        'plot_number': '2BA',
      }),
    ]),
    'completion_date': datetime.date(2021, 12, 12),
    'street': 'MeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreet 3a',
    'submit_date': datetime.datetime(2021, 12, 12, 11, 0, tzinfo=datetime.timezone.utc),
    'publication_date': datetime.datetime(2021, 12, 12, 11, 0, tzinfo=datetime.timezone.utc),
    'construction_start_date': datetime.date(2021, 12, 12),
    'profile_approval_date': datetime.date(2021, 12, 12),
    'decision_date': datetime.date(2021, 12, 12),
    'final_approval_date': datetime.date(2021, 12, 12),
    'applicants': list([
      dict({
        'company': 'Chocolate Factory',
        'country': 'Schweiz',
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'is_juristic_person': None,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'phone': '+1 101 10 01 101',
        'street': 'Candy Lane 13',
        'town': 'Wonderland',
        'zip': 1234,
      }),
    ]),
    'landowners': list([
      dict({
        'company': 'Chocolate Factory',
        'country': 'Schweiz',
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'is_juristic_person': None,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'phone': '+1 101 10 01 101',
        'street': 'Candy Lane 13',
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
    'project_authors': list([
      dict({
        'company': None,
        'country': 'Schweiz',
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'is_juristic_person': None,
        'juristic_name': None,
        'last_name': 'Wonka',
        'phone': '+1 101 10 01 101',
        'street': 'Candy Lane',
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
  })
# ---
# name: test_record_loading_sz[True]
  OrderedDict({
    'coordinates': list([
      list([
        dict({
          'lat': 47.175669937318816,
          'lng': 8.8984885140077,
        }),
      ]),
    ]),
    'plot_data': list([
      dict({
        'egrid_number': 'HK207838123456',
        'plot_number': '123',
      }),
      dict({
        'egrid_number': 'EGRIDDELLEY',
        'plot_number': '2BA',
      }),
    ]),
    'completion_date': datetime.date(2021, 12, 12),
    'street': 'MeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreetMeanstreet 3a',
    'submit_date': datetime.datetime(2021, 12, 12, 11, 0, tzinfo=datetime.timezone.utc),
    'publication_date': datetime.datetime(2021, 12, 12, 11, 0, tzinfo=datetime.timezone.utc),
    'construction_start_date': datetime.date(2021, 12, 12),
    'profile_approval_date': datetime.date(2021, 12, 12),
    'decision_date': datetime.date(2021, 12, 12),
    'final_approval_date': datetime.date(2021, 12, 12),
    'applicants': list([
      dict({
        'company': 'Chocolate Factory',
        'country': 'Schweiz',
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'is_juristic_person': None,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'phone': '+1 101 10 01 101',
        'street': 'Candy Lane 13',
        'town': 'Wonderland',
        'zip': 1234,
      }),
    ]),
    'landowners': list([
      dict({
        'company': 'Chocolate Factory',
        'country': 'Schweiz',
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'is_juristic_person': None,
        'juristic_name': 'Chocolate Factory',
        'last_name': 'Wonka',
        'phone': '+1 101 10 01 101',
        'street': 'Candy Lane 13',
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
    'project_authors': list([
      dict({
        'company': None,
        'country': 'Schweiz',
        'email': 'candy@example.com',
        'first_name': 'Willy',
        'is_juristic_person': None,
        'juristic_name': None,
        'last_name': 'Wonka',
        'phone': '+1 101 10 01 101',
        'street': 'Candy Lane',
        'town': 'Wonderland',
        'zip': '1234',
      }),
    ]),
  })
# ---
# name: test_validation[zip-archive-xlsx-import-example-validation-errors.zip-None-None-False]
  list([
    dict({
      'details': list([
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'SUBMIT-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'PUBLICATION-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'DECISION-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'CONSTRUCTION-START-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'PROFILE-APPROVAL-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'FINAL-APPROVAL-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'COMPLETION-DATE',
          'level': 3,
        }),
      ]),
      'dossier_id': '2017-84',
      'status': 'success',
    }),
    dict({
      'details': list([
        dict({
          'code': 'status-choice-validation-error',
          'detail': 'DONKED',
          'field': 'STATUS',
          'level': 3,
        }),
      ]),
      'dossier_id': '2017-86',
      'status': 'success',
    }),
    dict({
      'details': list([
        dict({
          'code': 'missing-required-field-error',
          'detail': None,
          'field': 'STATUS',
          'level': 3,
        }),
      ]),
      'dossier_id': '2017-87',
      'status': 'success',
    }),
    dict({
      'details': list([
        dict({
          'code': 'missing-required-field-error',
          'detail': None,
          'field': 'SUBMIT-DATE',
          'level': 3,
        }),
      ]),
      'dossier_id': '9',
      'status': 'success',
    }),
  ])
# ---
# name: test_validation[zip-archive-xlsx-import-example-validation-errors.zip-None-None-instance]
  list([
    dict({
      'details': list([
        dict({
          'code': 'update-dossier',
          'detail': '2017-84',
          'field': 'ID',
          'level': 2,
        }),
        dict({
          'code': 'update-dossier',
          'detail': 'Der Wert SUBMITTED wird beim Re-Import des Dossiers ignoriert.',
          'field': 'STATUS',
          'level': 1,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'SUBMIT-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'PUBLICATION-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'DECISION-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'CONSTRUCTION-START-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'PROFILE-APPROVAL-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'FINAL-APPROVAL-DATE',
          'level': 3,
        }),
        dict({
          'code': 'date-field-validation-error',
          'detail': 'not-a-date',
          'field': 'COMPLETION-DATE',
          'level': 3,
        }),
      ]),
      'dossier_id': '2017-84',
      'status': 'success',
    }),
    dict({
      'details': list([
        dict({
          'code': 'update-dossier',
          'detail': '2017-86',
          'field': 'ID',
          'level': 2,
        }),
        dict({
          'code': 'update-dossier',
          'detail': 'Der Wert DONKED wird beim Re-Import des Dossiers ignoriert.',
          'field': 'STATUS',
          'level': 1,
        }),
      ]),
      'dossier_id': '2017-86',
      'status': 'success',
    }),
    dict({
      'details': list([
        dict({
          'code': 'update-dossier',
          'detail': '2017-87',
          'field': 'ID',
          'level': 2,
        }),
      ]),
      'dossier_id': '2017-87',
      'status': 'success',
    }),
    dict({
      'details': list([
        dict({
          'code': 'update-dossier',
          'detail': '2017-88',
          'field': 'ID',
          'level': 2,
        }),
        dict({
          'code': 'update-dossier',
          'detail': 'Der Wert SUBMITTED wird beim Re-Import des Dossiers ignoriert.',
          'field': 'STATUS',
          'level': 1,
        }),
      ]),
      'dossier_id': '2017-88',
      'status': 'success',
    }),
    dict({
      'details': list([
        dict({
          'code': 'update-dossier',
          'detail': '9',
          'field': 'ID',
          'level': 2,
        }),
        dict({
          'code': 'update-dossier',
          'detail': 'Der Wert SUBMITTED wird beim Re-Import des Dossiers ignoriert.',
          'field': 'STATUS',
          'level': 1,
        }),
      ]),
      'dossier_id': '9',
      'status': 'success',
    }),
  ])
# ---
